--- a/src/comps/Home/Home.scss
+++ b/src/comps/Home/Home.scss
@@ -8,10 +8,11 @@
         float: left;
     }
     .title {
+        float: left;
         font-size: 24px;
         color: #fff;
     }
-    .user_info {
-        
+    .options {
+        float: right;
     }
 }
