--- a/src/comps/Topology/Topology.scss
+++ b/src/comps/Topology/Topology.scss
@@ -3,6 +3,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
+    bottom: 0;
     margin: auto;
     background-image: url('../../statics/image/bg2.jpg');
     background-size: 100%;
